# Muteify

./: .clang-tidy  CMakeLists.txt  README.md  get_token.py
src/: CMakeLists.txt  get.c  get.h  main.c
